# filemate-ai

./: .gitignore  CLAUDE.md  NexFile_PRD_v2.0.docx  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows.yml  build.yml
docs/superpowers/specs/: 2026-04-26-native-search-backends-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: ai.rs  ai_analyze.rs  archive.rs  automation.rs  batch.rs  bookmarks.rs  cleanup.rs  db.rs  disk.rs  encryption.rs  error.rs  filename_index.rs  fs.rs  lib.rs  main.rs  oauth.rs  open_with.rs  preview.rs  recents.rs  search.rs  settings.rs  state.rs  tags.rs  terminal.rs  version.rs  watcher.rs  workspaces.rs
src-tauri/src/cloud/: dropbox.rs  gdrive.rs  mod.rs  onedrive.rs  s3.rs  webdav.rs
src-tauri/src/preview/: audio.rs  code.rs  font.rs  image_meta.rs  mod.rs  text.rs
src/api/: index.ts  types.ts
src/components/: FileIcon.tsx  OpenWithMenu.tsx
src/components/files/: ColumnView.tsx
src/components/layout/: AIPanel.tsx  AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/preview/: Histogram.tsx  PropsPanel.tsx  QuickLook.tsx  useQuickLook.tsx
src/components/preview/renderers/: Archive.tsx  Audio.tsx  Code.tsx  Font.tsx  Generic.tsx  Image.tsx  Markdown.tsx  Pdf.tsx  Svg.tsx  Video.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  toast.tsx
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/lib/: format.ts  utils.ts
src/pages/: AIProviders.tsx  Analyze.tsx  Automation.tsx  BatchRename.tsx  Cloud.tsx  Duplicates.tsx  Encryption.tsx  Favorites.tsx  Files.tsx  Home.tsx  Preview.tsx  Search.tsx  Settings.tsx  Storage.tsx  Tags.tsx  Terminal.tsx  VersionHistory.tsx  Workspaces.tsx
src/stores/: indexStatus.ts  layout.ts  theme.ts
