[package]
name = "filemate-ai"
version = "0.1.0"
description = "FileMate AI — smarter file management"
authors = ["FileMate AI"]
edition = "2021"

[lib]
name = "filemate_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
