[package]
name = "filemate-ai"
version = "0.1.5"
description = "FileMate AI — smarter file management"
authors = ["FileMate AI"]
edition = "2021"

[lib]
name = "filemate_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"

# core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# filesystem
notify = "6"
notify-debouncer-full = "0.3"
walkdir = "2"
trash = "5"
dirs = "5"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
opener = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"

# search / db
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
unicode-segmentation = "1"

# diff / version
similar = "2"

# preview
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico"] }
kamadak-exif = "0.5"
lofty = "0.21"

# crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# http / cloud
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
futures-util = "0.3"
rust-s3 = { version = "0.34", default-features = false, features = ["tokio-rustls-tls"] }
url = "2"
urlencoding = "2"

# terminal
portable-pty = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
